--- a/MarketPlaceWeb/MarketPlaceWeb.csproj
+++ b/MarketPlaceWeb/MarketPlaceWeb.csproj
@@ -30,4 +30,11 @@
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Areas\User\Views\Account\ChangePassword.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
