--- a/MarketPlaceWeb/MarketPlaceWeb.csproj
+++ b/MarketPlaceWeb/MarketPlaceWeb.csproj
@@ -31,6 +31,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Areas\Seller\Views\_ViewImports.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Areas\Seller\Views\_ViewStart.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Update="Areas\User\Views\Account\ChangePassword.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
